src/test/deca/syntax/invalid/if-withoutBody.synt
if-withoutBody.deca:2: